Closed
Bug 1658010
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::ContentBlockingNotifier::OnEvent]
Categories
(Core :: Privacy: Anti-Tracking, defect)
Tracking
()
RESOLVED
FIXED
81 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox79 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | fixed |
People
(Reporter: u608768, Assigned: dimi)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-05209412-76a3-4cad-8cd6-b6dc50200807.
Top 10 frames of crashing thread:
0 xul.dll static mozilla::ContentBlockingNotifier::OnEvent toolkit/components/antitracking/ContentBlockingNotifier.cpp:523
1 xul.dll static mozilla::ContentBlocking::OnAllowAccessFor toolkit/components/antitracking/ContentBlocking.cpp:606
2 xul.dll mozilla::ContentBlocking::AllowAccessFor::<unnamed-tag>::operator const toolkit/components/antitracking/ContentBlocking.cpp:370
3 xul.dll mozilla::MozPromise<mozilla::Maybe<mozilla::ContentBlocking::StorageAccessPromptChoices>, mozilla::ipc::ResponseRejectReason, 1>::ThenValue<`lambda at /builds/worker/checkouts/gecko/toolkit/components/antitracking/ContentBlocking.cpp:360:14'>::DoResolveOrRejectInternal xpcom/threads/MozPromise.h:837
4 xul.dll mozilla::MozPromise<mozilla::Maybe<mozilla::ContentBlocking::StorageAccessPromptChoices>, mozilla::ipc::ResponseRejectReason, 1>::ThenValueBase::ResolveOrRejectRunnable::Run xpcom/threads/MozPromise.h:410
5 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1256
6 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:109
7 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:327
8 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:309
9 xul.dll nsBaseAppShell::Run widget/nsBaseAppShell.cpp:137
Spiked in nightly build 20200806215439. Push log: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=6e35e01646d7c465893a172a0b4fb116c2293d2a&tochange=95cbd137913873b3e3dddda4b4d895ce28e04048.
Sounds like this could've been bug 1654064.
Flags: needinfo?(dlee)
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → dlee
Status: NEW → ASSIGNED
Pushed by dlee@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/fa0dbdf15f29
Add null pointer check before notifying content block event r=xeonchen
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox81:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
| Assignee | ||
Updated•5 years ago
|
Flags: needinfo?(dlee)
Comment 4•5 years ago
|
||
Set release status flags based on info from the regressing bug 1654064
status-firefox79:
--- → unaffected
status-firefox80:
--- → unaffected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Updated•5 years ago
|
Keywords: regression
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•