Bug 1658010 - Add null pointer check before notifying content block event r=xeonchen

Differential Revision: https://phabricator.services.mozilla.com/D86421